[tool.poetry]
name = "pvmodules"
version = "0.1.0"
description = "check for erroneous data in the CEC module dataset and generate model coefficients"
authors = ["Allen Lawrence <allen@tybaenergy.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.8"
NREL-PySAM = "^2.2.4"
pandas = "^1.3.4"
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
jupyterlab = "^3.2.0"
black = "^21.9b0"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
